{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 309,
  "lineage": "5fb8a177-47bb-70fc-3793-b9fc722f2ba2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkInterfaces/nic-ol40pl",
            "internal_domain_name_suffix": "fjtji2qoacpuzj014po5hba05g.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/publicIPAddresses/pip-default",
                "subnet_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-websubnet"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-7B-6B-88",
            "name": "nic-ol40pl",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "virtual_machine_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Compute/virtualMachines/VMLinux-ol40pl"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP-01",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg",
            "location": "eastus2",
            "name": "sap-dev-vnet-default-appsubnet-nsg",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-8080",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-bastionsubnet-nsg",
            "location": "eastus2",
            "name": "sap-dev-vnet-default-bastionsubnet-nsg",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3389",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg",
            "location": "eastus2",
            "name": "sap-dev-vnet-default-dbsubnet-nsg",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-1433",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-3306",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-5432",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-websubnet-nsg",
            "location": "eastus2",
            "name": "sap-dev-vnet-default-websubnet-nsg",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-Port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "sap-dev-vnet-default-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "sap-dev-vnet-default-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "sap-dev-vnet-default-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-vnet-default-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-vnet-default-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "sap-dev-vnet-default-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "sap-dev-vnet-default-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "sap-dev-vnet-default-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "sap-dev-vnet-default-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "sap-dev-vnet-default-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "sap-dev-vnet-default-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/publicIPAddresses/pip-default",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.242.49.116",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pip-default",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-appsubnet",
            "name": "sap-dev-vnet-default-appsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-bastionsubnet",
            "name": "sap-dev-vnet-default-bastionsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-dbsubnet",
            "name": "sap-dev-vnet-default-dbsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-websubnet",
            "name": "sap-dev-vnet-default-websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "virtual_network_name": "sap-dev-vnet-default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-appsubnet",
            "network_security_group_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg",
            "subnet_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-bastionsubnet",
            "network_security_group_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-dbsubnet",
            "network_security_group_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg",
            "subnet_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-websubnet",
            "network_security_group_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-websubnet-nsg",
            "subnet_id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7294662a-000e-4c9f-a75b-f3ddf3841afe",
            "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default",
            "location": "eastus2",
            "name": "sap-dev-vnet-default",
            "resource_group_name": "sap-dev-rg-default-ol40pl",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-websubnet",
                "name": "sap-dev-vnet-default-websubnet",
                "security_group": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-websubnet-nsg"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-bastionsubnet",
                "name": "sap-dev-vnet-default-bastionsubnet",
                "security_group": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-bastionsubnet-nsg"
              },
              {
                "address_prefix": "10.0.11.0/24",
                "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-appsubnet",
                "name": "sap-dev-vnet-default-appsubnet",
                "security_group": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-appsubnet-nsg"
              },
              {
                "address_prefix": "10.0.21.0/24",
                "id": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/virtualNetworks/sap-dev-vnet-default/subnets/sap-dev-vnet-default-dbsubnet",
                "name": "sap-dev-vnet-default-dbsubnet",
                "security_group": "/subscriptions/854ef3b3-78cd-4397-949b-7a51cd858300/resourceGroups/sap-dev-rg-default-ol40pl/providers/Microsoft.Network/networkSecurityGroups/sap-dev-vnet-default-dbsubnet-nsg"
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}